WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201464
[LFC] Assert on FormattingContext escaping
https://bugs.webkit.org/show_bug.cgi?id=201464
Summary
[LFC] Assert on FormattingContext escaping
alan
Reported
2019-09-04 11:31:51 PDT
We should not need to read display boxes in different formatting contexts apart from a few (justified) cases.
Attachments
Patch
(17.32 KB, patch)
2019-09-04 11:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.37 KB, patch)
2019-09-04 11:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.36 KB, patch)
2019-09-04 12:58 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-04 11:32:14 PDT
<
rdar://problem/55029574
>
alan
Comment 2
2019-09-04 11:40:15 PDT
Created
attachment 377992
[details]
Patch
Antti Koivisto
Comment 3
2019-09-04 11:44:19 PDT
Comment on
attachment 377992
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=377992&action=review
> Source/WebCore/layout/FormattingContext.h:72 > + enum class EscapeType { AccesChildFormattingContext, AccessParentFormattingContext, AccessAncestorFormattingContext };
Typo "Acces" Maybe split this into lines?
alan
Comment 4
2019-09-04 11:48:34 PDT
Created
attachment 377994
[details]
Patch
alan
Comment 5
2019-09-04 12:58:49 PDT
Created
attachment 378002
[details]
Patch
WebKit Commit Bot
Comment 6
2019-09-04 13:42:15 PDT
Comment on
attachment 378002
[details]
Patch Clearing flags on attachment: 378002 Committed
r249497
: <
https://trac.webkit.org/changeset/249497
>
WebKit Commit Bot
Comment 7
2019-09-04 13:42:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug