[LFC] Assert on FormattingContext escaping https://bugs.webkit.org/show_bug.cgi?id=201464 <rdar://problem/55029574>

Reviewed by Antti Koivisto.

This patch asserts on accidental formatting context escaping. This is only a correctness issue at the moment,
since we don't support multithreaded subtree layout yet.
Normally we should not need to access display boxes in different formatting contexts during layout, but there are a few, justified cases when it is required.

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::displayBoxForLayoutBox const):
* layout/FormattingContext.h:
(WebCore::Layout::FormattingContext::displayBoxForLayoutBox const): Deleted.
* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::contentHeightForFormattingContextRoot const):
(WebCore::Layout::FormattingContext::Geometry::staticVerticalPositionForOutOfFlowPositioned const):
(WebCore::Layout::FormattingContext::Geometry::staticHorizontalPositionForOutOfFlowPositioned const):
* layout/FormattingContextQuirks.cpp:
(WebCore::Layout::FormattingContext::Quirks::heightValueOfNearestContainingBlockWithFixedHeight):
* layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::absoluteDisplayBoxCoordinates const):
(WebCore::Layout::FloatingContext::mapToFloatingStateRoot const):
(WebCore::Layout::FloatingContext::mapTopToFloatingStateRoot const):
(WebCore::Layout::FloatingContext::mapPointFromFormattingContextRootToFloatingStateRoot const):
* page/FrameViewLayoutContext.cpp:
(WebCore::layoutUsingFormattingContext):


Canonical link: https://commits.webkit.org/215105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249497 268f45cc-cd09-0410-ab3c-d52691b4dbfc